--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h1, h2, h3 {
 }
 
 h3 {
-	font-size: 22px
+	font-size: 20px
 }
 
 
@@ -97,9 +97,9 @@ nav {
 	background: #efefef;
 }
 
-.nav_vertical_bar {
+.nav_horizontal_bar {
 	background: #efefef;
-	width: 1px; 
+	width: 2px; 
 	height: 100%;
 }
 
@@ -172,7 +172,7 @@ footer {
 
 #footer_text {
 	font-size: 12px;
-	color: #cccccc;
+	color: white;
 }
 
 
@@ -191,9 +191,15 @@ footer {
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
+.thumbnail img {
+    max-width: 250px;
+}
+.left {
+    float: left;
+}
 
 .portfolio_pic {
-	height: 205px;
+	height: 200px;
 	margin-bottom: 56px;
 	position: relative;
 }
@@ -201,7 +207,7 @@ footer {
 .portfolio_pic_text_block {
 	background: #4aaaa5;
 	width: 100%;
-	height: 40px;
+	height: 50px;
 	margin-top: 136px;
 	padding-top: 20px;
 	position: absolute;
@@ -221,11 +227,11 @@ footer {
 
 /* the selectors below is specifically for contact.html */
 form {
-	margin-top: 27px;
+	margin-top: 30px;
 }
 
 input, textarea {
-	border: 1px solid #dddddd;
+	border: 2px solid #dddddd;
 	width: 564px;
 	margin-top: 7px;
 	padding: 9px;
@@ -256,7 +262,7 @@ textarea {
 	height: 198px;
 }
 
-/* media queries for various screen widths */
+/* These are for the media queries for 980px, 768, and 640 */
 @media screen and (max-width: 980px) {
 
 header {
